--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ cartridges/app_storefront_base/cartridge/static/zh_CN/fonts/
 cartridges/app_storefront_base/cartridge/static/en_GB/css/
 cartridges/app_storefront_base/cartridge/static/en_GB/js/
 cartridges/app_storefront_base/cartridge/static/en_GB/fonts/
+cartridges/dw-api-types/
+cartridges/custom_cartridge_pdp/cartridge/static/default/css/
+cartridges/custom_cartridge_pdp/cartridge/static/default/js/
 
 coverage/
 npm-debug.log
